
** brought documentation from oligoClasses

12-06-2009: B Carvalho - committed version 1.11.10

** removed se.exprs

01-22-2010: B Carvalho - committed version 1.11.11

** added support for large objects (via bigmemory)
    read.celfiles / read.xysfiles / read.celfiles2 / read.xysfiles2
** added support for parallel computing (via snow - requires bigmemory)
** implemented backgroundCorrect for matrix and big.matrix
** implemented normalize for matrix and big.matrix
** implemented summarize for matrix and big.matrix
** implemented rma workflow for big.matrix
** removed doc for list.celfiles, which is now in oligoClasses
** removed useAffyio argument from read.celfiles and read.celfiles2
** now imports 'digest'
** rma (expression) supports large objects and parallel computing
** rma (exon/gene) supports large objects and parallel computing
** added some diagnostic messages when package is attached
   on large dataset and parallel computing support
** added hooks for bigmemory/snow packages

02-02-2010: B Carvalho - committed version 1.11.12

** fixed bug in rma with big objects in which sample indices were
   missing if user chose to skip background correction.

02-11-2010: B Carvalho - v 1.11.14

** exported pmChr
** fixed .onAttach

02-18-2010: B Carvalho - v 1.11.15

** support to large datasets is now given through 'ff'
** digest is no longer a dependency

02-26-2010: B Carvalho - v 1.11.18

** added darkColors and seqColors, which will interpolate along some
   colors I like and generate a vector of length N to be used to set
   colors when plotting
** added plotM method for SnpSuperSet
** added getAffinitySplineCoefficients (estimate affinity spline coefs) 
   and getBaseProfile (estimate actual effect and optionally plot it)
** added Hands-On vignette

03-01-2010: B Carvalho - v 1.11.22

** fixed vignette scheme
** (x.y.20) fixed getFid*

03-04-2010: B Carvalho - v 1.11.23

** fixed format of NEWS
** fixed NAMESPACE/DESCRIPTION: packages now in Imports