@@ -1,6 +1,5 @@
 - improve documentation
 - add examples, so package is tested whenever it's built and modifications do not break current code
-- will need data pkgs (ie, with CEL/XYS files) and annotation pkg, so examples can be executed
 - add support for exon/rma and gene/rma (filtering + summarization)
 - add scanDate to protocolData (check affy)
 - fix functions for regular crlmm (there are instances of SnpQSet - replaced by AlleleSet - use bothStrands)
@@ -9,3 +8,4 @@
      by type: pm/mm/bg/all
      selected fields: x/y/fid/fsetid/man_fsetid
 - subset argument to methods to use selectProbes()
+- add oligo version to FeatureSet objs
