@@ -1,0 +1,26 @@
+\name{getAffinitySplineCoefficients}
+\alias{getAffinitySplineCoefficients}
+%- Also NEED an '\alias' for EACH other topic documented here.
+\title{
+%%  ~~function to do ... ~~
+}
+\description{
+%%  ~~ A concise (1-5 lines) description of what the function does. ~~
+}
+\usage{
+getAffinitySplineCoefficients(intensities, sequences)
+}
+%- maybe also 'usage' for other objects documented here.
+\arguments{
+  \item{intensities}{Intensity matrix}
+  \item{sequences}{Probe sequences}
+}
+\value{
+  Matrix with estimated coefficients.
+}
+\seealso{
+getBaseProfile
+}
+
+\keyword{manip}
+
